<resources>
    <string name="app_name">Don8fy</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_new_item">Add New Item</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_favorites">Favorites</string>
    <string name="menu_search">Search</string>
    <string name="menu_account">Account</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_logout">Logout</string>
    <string name="welcome_to_don8fy_app">Welcome to Don8fy App</string>
    <string name="don8fy_logo">Don8fy logo</string>
    <string name="have_an_account">Have an Account?</string>
    <string name="have_no_account">Have no Account?</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="click_here">Click here!</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign In</string>
    <string name="show_password">Show Password</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="greetings">Hi There! Nice to see you!</string>
    <string name="full_name">Full Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="hello">New Item</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_new_item">Add New Item</string>
    <string name="cancel">Cancel</string>
    <string name="save_item">Save Item</string>
    <string name="title">Don8fy</string>
    <string name="detail_item">Detail Item</string>
    <string name="item_image">Item Image</string>
    <string name="product_name">Product Name</string>
    <string name="product_description">Product Description</string>
    <string name="edit_item">Edit Item</string>
    <string name="item_picked_up">Item Picked Up</string>
    <string name="set_location">Set Location</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="save_changes">Save Changes</string>
    <string name="cancel_changes">Cancel changes</string>
    <string name="edit_page">Edit Page</string>
    <string name="favorite_item">Favorite Item</string>
    <string name="enter_your_e_mail">Enter your e-mail</string>
    <string name="no_favorite_item">Sorry... :\'( \n\n\n There is no favorite item!</string>
    <string name="exit">Exit</string>
    <string name="app_logo">Don8fy app</string>
    <string name="item">Item</string>

</resources>