<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_menu_favorites"
            android:title="@string/menu_favorites" />

    </group>
    <item android:title="@string/menu_profile">
        <menu>
            <group android:checkableBehavior="single">
                <item android:id="@+id/nav_account"
                    android:icon="@drawable/ic_menu_account"
                    android:title="@string/menu_account"/>

                <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/ic_menu_logout"
                    android:title="@string/menu_logout" />

                <item
                    android:id="@+id/nav_exit"
                    android:icon="@drawable/ic_menu_exit"
                    android:title="@string/exit" />
            </group>
        </menu>
    </item>
</menu>
