<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.don8fy.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_home_to_mainActivity"
            app:destination="@id/main_activity" />
    </fragment>

    <activity
        android:id="@+id/main_activity"
        android:name="com.example.don8fy.MainActivity"
        android:label="@string/app_name" />

    <fragment
        android:id="@+id/nav_account"
        android:name="com.example.don8fy.ui.account.AccountFragment"
        android:label="@string/menu_account"
        tools:layout="@layout/fragment_account" />

    <fragment
        android:id="@+id/nav_favorites"
        android:name="com.example.don8fy.ui.favorites.FavoritesFragment"
        android:label="@string/menu_favorites"
        tools:layout="@layout/fragment_favorites" />

    <fragment
        android:id="@+id/nav_logout"
        android:name="com.example.don8fy.ui.access.LogoutFragment"
        android:label="@string/menu_logout"
        tools:layout="@layout/fragment_logout" />

    <fragment
        android:id="@+id/nav_detail_item"
        android:name="com.example.don8fy.ui.item.DetailItemFragment"
        android:label="@string/detail_item"
        tools:layout="@layout/fragment_detail_item" />

    <fragment
        android:id="@+id/nav_new_item"
        android:name="com.example.don8fy.ui.item.NewItemFragment"
        android:label="@string/menu_new_item"
        tools:layout="@layout/fragment_new_item" />

</navigation>