<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical"
    android:paddingStart="32dp"
    android:paddingEnd="32dp"
    android:paddingTop="64dp"
    android:paddingBottom="64dp">

    <ImageView
        android:layout_width="208dp"
        android:layout_height="155dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/don8fylogopng"
        android:contentDescription="@string/app_logo"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textSize="32sp"
        android:textColor="@color/blue"
        android:textStyle="bold"
        android:layout_marginTop="32dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/greetings"
        android:textSize="18sp"
        android:layout_marginTop="8dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/blue"
        android:textStyle="bold"
        android:text="@string/email"
        android:layout_marginTop="24dp"/>

    <EditText
        android:id="@+id/emailtxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:layout_marginTop="8dp"
        android:background="@drawable/edit_text_background"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/blue"
        android:textStyle="bold"
        android:text="@string/password"
        android:layout_marginTop="24dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/passwordtxt"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:background="@drawable/edit_text_background"/>

        <ImageButton
            android:id="@+id/eyebtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:src="@drawable/ic_show"
            android:tint="@color/blue"
            android:contentDescription="@string/show_password" />

    </LinearLayout>

    <Button
        android:id="@+id/loginbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/blue"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:text="@string/sign_in"
        android:elevation="6dp"
        android:stateListAnimator="@null"
        android:background="@drawable/button_background"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/forgot_password" />

            <TextView
                android:id="@+id/forgotbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:layout_marginLeft="10dp"
                android:text="@string/click_here"
                android:textColor="@color/blue"/>

            <TextView
                android:id="@+id/signupbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp"
                android:gravity="end"
                android:textStyle="bold"
                android:text="@string/sign_up"
                android:textColor="@color/blue" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
