<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/sign_up"
        android:textSize="30sp"
        android:textColor="@color/blue"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/full_name"
        android:textColor="@color/blue"
        android:textSize="20sp"
        android:textStyle="bold" />
    <EditText
        android:id="@+id/fullnametxt"
        android:layout_width="350dp"
        android:hint="Your name"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginTop="30dp"
        android:textColor="@color/blue"
        android:textStyle="bold"
        android:text="@string/email"/>

    <EditText
        android:id="@+id/emailtxt"
        android:layout_width="350dp"
        android:hint="Your email address"
        android:inputType="textEmailAddress"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginTop="30dp"
        android:textColor="@color/blue"
        android:textStyle="bold"
        android:text="@string/password"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/passwordtxt"
            android:layout_width="300dp"
            android:inputType="textPassword"
            android:layout_height="wrap_content"/>

        <ImageButton
            android:id="@+id/eyebtn"
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@null"
            android:src="@drawable/ic_show" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginTop="30dp"
        android:textColor="@color/blue"
        android:textStyle="bold"
        android:text="@string/confirm_password"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/confirmpasswordtxt"
            android:layout_width="300dp"
            android:inputType="textPassword"
            android:layout_height="wrap_content"/>

        <ImageButton
            android:id="@+id/eyebtn2"
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@null"
            android:src="@drawable/ic_show" />

    </LinearLayout>

    <Button
        android:id="@+id/registerbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/blue"
        android:textSize="25sp"
        app:cornerRadius="5dp"
        android:text="@string/register"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/forgotbtn"
            android:layout_width="189dp"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/have_an_account"/>

        <TextView
            android:id="@+id/signinbtn"
            android:layout_width="158dp"
            android:layout_height="match_parent"
            android:gravity="end"
            android:text="@string/sign_in"
            android:textColor="@color/blue"/>

    </LinearLayout>
</LinearLayout>