<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:fillViewport="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        tools:context=".ui.item.DetailItemFragment"
        android:background="@color/off_white">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="MissingConstraints"
            android:background="@drawable/detail_background">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/detail_item"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/blue"/>
            <ImageView
                android:id="@+id/imageProduct"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:scaleType="centerCrop"
                android:padding="10dp"
                android:src="@drawable/ic_android"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="24dp"
                android:contentDescription="@string/item_image" />

            <TextView
                android:id="@+id/detailProductName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/product_name"
                android:textSize="24sp"
                android:textColor="@color/blue"
                android:layout_marginTop="3dp" />

            <TextView
                android:id="@+id/detailProductDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/product_description"
                android:textSize="20sp"
                android:textColor="@color/blue"
                android:layout_marginTop="15dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="Location"
                android:textSize="20dp"
                android:textColor="@color/blue"
                android:layout_marginTop="20dp"/>

            <fragment
                android:id="@+id/maps"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="340dp"
                android:layout_gravity="center"
                android:layout_height="242dp"
                tools:ignore="FragmentTagUsage" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnEdit"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/blue"
                    android:padding="12dp"
                    android:text="@string/edit_item"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:background="@drawable/button_background"/>


                <Button
                    android:id="@+id/btnDelete"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/blue"
                    android:padding="12dp"
                    android:text="@string/item_picked_up"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:background="@drawable/button_background"/>


            </LinearLayout>

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>



</ScrollView>

